fix: fix overflowing of words comment

--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -9,6 +9,8 @@
 	gap: 1rem;
 	margin-top: 1rem;
 	text-align: left;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 .userImage {
@@ -49,6 +51,10 @@
 
 .comment {
 	font-size: 1rem;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	word-wrap: break-word;
 }
 
 .deleteHeading {
