--- a/src/components/Tweet/Tweet.module.css
+++ b/src/components/Tweet/Tweet.module.css
@@ -28,6 +28,7 @@
 	width: 80%;
 	overflow-y: hidden;
 	resize: none;
+	height: auto;
 	max-height: 40rem;
 }
 
